# Facial_Information_Recognition

./: ReadMe.md  pyproject.toml  résumé_prés.pptx
