[tool.poetry]
name = "facial-information-recognition"
version = "0.1.0"
description = "Specialty project, the objective is to do facial information recognition"
authors = ["Maxime POPOT--CHAPUIS <maxime.popot@gmail.com>"]
readme = "README.md"
packages = [{include = "facial_information_recognition"}]

[tool.poetry.dependencies]
python = "~3.8"
matplotlib = "^3.7.1"
jupyterlab = "^3.6.1"
scikit-learn = "^1.2.2"
imageio = "^2.26.0"
tensorflow = "2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
